Add tab bar controller and tab bar views

--- a/Tweeter/Base.lproj/Main.storyboard
+++ b/Tweeter/Base.lproj/Main.storyboard
@@ -79,12 +79,12 @@
                     </view>
                     <connections>
                         <outlet property="loginButton" destination="1ka-Ub-eZ0" id="hrQ-fW-pCu"/>
-                        <segue destination="PMx-hh-rjp" kind="presentation" identifier="loginSegue" id="eys-sM-hqO"/>
+                        <segue destination="5Ce-l3-qYT" kind="presentation" identifier="loginSegue" id="3vY-w1-46Z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
+            <point key="canvasLocation" x="-738" y="1054"/>
         </scene>
         <!--Tweets View Controller-->
         <scene sceneID="KVi-G6-KQg">
@@ -99,7 +99,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="z8L-4l-mF9">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
@@ -111,6 +111,7 @@
                             <constraint firstAttribute="trailing" secondItem="z8L-4l-mF9" secondAttribute="trailing" id="wzB-iY-PwF"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" id="P7s-a8-sZP"/>
                     <navigationItem key="navigationItem" id="LOq-Ym-KF1"/>
                     <connections>
                         <outlet property="tableView" destination="z8L-4l-mF9" id="H1A-bz-YdG"/>
@@ -118,12 +119,108 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fNL-sZ-7mX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1688.8" y="138.98050974512745"/>
+            <point key="canvasLocation" x="1566" y="-1275"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Tab Bar Controller-->
+        <scene sceneID="hU5-ds-Afu">
+            <objects>
+                <tabBarController id="5Ce-l3-qYT" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="oDs-2S-mK7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="0.25098039220000001" green="0.59999999999999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="PMx-hh-rjp" kind="relationship" relationship="viewControllers" id="1B7-Gn-U6B"/>
+                        <segue destination="3LN-b9-o3A" kind="relationship" relationship="viewControllers" id="oxd-nr-BOW"/>
+                        <segue destination="zAW-qe-7up" kind="relationship" relationship="viewControllers" id="BqG-oC-HBf"/>
+                        <segue destination="8lG-MQ-aWQ" kind="relationship" relationship="viewControllers" id="qpy-nH-WQA"/>
+                        <segue destination="NfY-vA-rrt" kind="relationship" relationship="viewControllers" id="fjk-KV-0mj"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N0X-5Y-CAA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="9" y="1054"/>
+        </scene>
+        <!--Notifications View Controller-->
+        <scene sceneID="i4K-pI-Ps4">
+            <objects>
+                <viewController id="Min-jE-n5T" customClass="NotificationsViewController" customModule="Tweeter" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9pK-Sz-RjA"/>
+                        <viewControllerLayoutGuide type="bottom" id="yxi-MU-fgx"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BmK-aC-oKz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dvK-a4-rdw">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dvK-a4-rdw" firstAttribute="top" secondItem="BmK-aC-oKz" secondAttribute="top" id="GMp-3v-9Zd"/>
+                            <constraint firstItem="dvK-a4-rdw" firstAttribute="leading" secondItem="BmK-aC-oKz" secondAttribute="leading" id="bY9-H3-mvm"/>
+                            <constraint firstItem="yxi-MU-fgx" firstAttribute="top" secondItem="dvK-a4-rdw" secondAttribute="bottom" id="gc1-rk-cqs"/>
+                            <constraint firstAttribute="trailing" secondItem="dvK-a4-rdw" secondAttribute="trailing" id="yqK-z4-CsC"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="kSm-eu-sMI"/>
+                    <connections>
+                        <outlet property="tableView" destination="dvK-a4-rdw" id="BBD-7U-17f"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EmR-YN-BwI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1566" y="-581"/>
+        </scene>
+        <!--Moments View Controller-->
+        <scene sceneID="uwe-Mi-qL0">
+            <objects>
+                <viewController id="8yy-qa-cVM" customClass="MomentsViewController" customModule="Tweeter" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="czE-dV-EeF"/>
+                        <viewControllerLayoutGuide type="bottom" id="2B4-ba-oWi"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1EE-AQ-ruV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="fOP-Sb-01Y"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yme-4v-CNf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1566" y="153"/>
+        </scene>
+        <!--Messages View Controller-->
+        <scene sceneID="sFK-p1-OxD">
+            <objects>
+                <viewController id="8Xi-6i-wGH" customClass="MessagesViewController" customModule="Tweeter" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Erx-5s-gwB"/>
+                        <viewControllerLayoutGuide type="bottom" id="37B-vp-bNr"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5f1-bl-nX7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="TaL-XI-4L4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7MP-Zv-Hce" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1566" y="902"/>
+        </scene>
+        <!--Home-->
         <scene sceneID="9Qf-Jg-psK">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PMx-hh-rjp" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Home" image="home-icon" id="G7Q-6X-gAR"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Vw4-8O-KGS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -136,10 +233,111 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0rU-wD-614" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="898" y="139"/>
+            <point key="canvasLocation" x="798" y="-1275"/>
+        </scene>
+        <!--Notifications-->
+        <scene sceneID="WZO-rd-L1z">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3LN-b9-o3A" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Notifications" image="notification-icon" id="Gaz-qo-0Cm"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4fh-7G-ir3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Min-jE-n5T" kind="relationship" relationship="rootViewController" id="Kgh-1q-c8P"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xz4-XR-26R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="798" y="-580"/>
+        </scene>
+        <!--Moments-->
+        <scene sceneID="x1Y-kR-928">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zAW-qe-7up" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Moments" image="moment-icon" id="Dfv-2q-GS3"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="L5w-un-IWe">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8yy-qa-cVM" kind="relationship" relationship="rootViewController" id="QSs-s0-Vog"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kfK-TW-8jY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="798" y="152"/>
+        </scene>
+        <!--Messages-->
+        <scene sceneID="fII-a9-Yvw">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8lG-MQ-aWQ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Messages" image="message-icon" id="JJy-Oo-nEf"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7ao-XJ-EG8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8Xi-6i-wGH" kind="relationship" relationship="rootViewController" id="Pa2-Pj-ZxJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9PK-qD-gYM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="798" y="901"/>
+        </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="ueR-Ci-p63">
+            <objects>
+                <viewController id="TJj-hP-08d" customClass="ProfileViewController" customModule="Tweeter" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hCj-7W-3Xm"/>
+                        <viewControllerLayoutGuide type="bottom" id="HTn-ib-LAz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ZcY-cr-aiL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Onq-PP-fwQ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dbc-ID-5Kr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1566" y="1612"/>
+        </scene>
+        <!--Me-->
+        <scene sceneID="UUR-qj-xwT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NfY-vA-rrt" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Me" image="profile-Icon" id="Pbk-nb-PHx"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vBJ-SV-N6g">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="TJj-hP-08d" kind="relationship" relationship="rootViewController" id="j1C-eU-oLY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j9R-go-X6H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="798" y="1612"/>
         </scene>
     </scenes>
     <resources>
         <image name="TwitterLogoBlue" width="200" height="200"/>
+        <image name="home-icon" width="30" height="30"/>
+        <image name="message-icon" width="30" height="30"/>
+        <image name="moment-icon" width="30" height="30"/>
+        <image name="notification-icon" width="30" height="30"/>
+        <image name="profile-Icon" width="26" height="26"/>
     </resources>
+    <color key="tintColor" red="0.25098039220000001" green="0.59999999999999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
