--- a/Tweeter/Base.lproj/Main.storyboard
+++ b/Tweeter/Base.lproj/Main.storyboard
@@ -99,7 +99,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="z8L-4l-mF9">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="90" id="uDS-4b-s0K" customClass="TweetCell" customModule="Tweeter" customModuleProvider="target">
@@ -209,7 +209,7 @@
                         <constraints>
                             <constraint firstItem="z8L-4l-mF9" firstAttribute="top" secondItem="uwd-0s-tSi" secondAttribute="top" id="B7Q-pa-Ld4"/>
                             <constraint firstItem="z8L-4l-mF9" firstAttribute="leading" secondItem="uwd-0s-tSi" secondAttribute="leading" id="hwa-B9-d5e"/>
-                            <constraint firstItem="GMR-Cr-0C8" firstAttribute="top" secondItem="z8L-4l-mF9" secondAttribute="bottom" id="txg-m9-0iD"/>
+                            <constraint firstAttribute="bottom" secondItem="z8L-4l-mF9" secondAttribute="bottom" id="sMU-SN-FaN"/>
                             <constraint firstAttribute="trailing" secondItem="z8L-4l-mF9" secondAttribute="trailing" id="wzB-iY-PwF"/>
                         </constraints>
                     </view>
