--- a/Tweeter/Base.lproj/Main.storyboard
+++ b/Tweeter/Base.lproj/Main.storyboard
@@ -323,6 +323,30 @@
             </objects>
             <point key="canvasLocation" x="1566" y="-581"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="wp1-SB-nhR">
+            <objects>
+                <viewController id="OCO-nq-OY3" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9eb-QG-NfT"/>
+                        <viewControllerLayoutGuide type="bottom" id="afI-6F-V1J"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="VDm-Nq-DnX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="favor-icon" translatesAutoresizingMaskIntoConstraints="NO" id="FfM-VJ-ZJO">
+                                <rect key="frame" x="67" y="190" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kfv-ci-MfZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2339" y="-391"/>
+        </scene>
         <!--Moments View Controller-->
         <scene sceneID="uwe-Mi-qL0">
             <objects>
